--- a/app/views/pages/detalheprodutoadm.ejs
+++ b/app/views/pages/detalheprodutoadm.ejs
@@ -68,7 +68,7 @@
             </section>
         </section>
     </section>
-
+    <script src="/js/perfil-autenticado.js"></script>
     <script src="/js/detalheprodutoadm.js"></script>
     <script src="/js/navegacao.js"></script>
 </body>
