--- a/app/views/pages/entrar.ejs
+++ b/app/views/pages/entrar.ejs
@@ -74,18 +74,8 @@
     </form>
   </main>
    <button type="submit" form="loginForm" class="login-btn">Entrar</button>
-  <script src="script/entrar.js"></script> 
-
- 
-                <script>
-        window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
-        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
-        window.userType = '<%= autenticado.tipo %>';
-        <% } else if (typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado) { %>
-        window.userType = 'c';
-        <% } %>
-    </script>
-    <script src="/js/navegacao.js"></script>
+    <script src="script/entrar.js"></script> 
+    <script src="/js/perfil-autenticado.js"></script>
     <script src="/js/navegacao.js"></script>
 </body>
 </html>
