--- a/app/views/pages/tensustentavel.ejs
+++ b/app/views/pages/tensustentavel.ejs
@@ -215,15 +215,12 @@
         <p class="copyright">©2024 Vintélo. Todos os direitos reservados.</p>
     </footer>
 
-                <script>
-        window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
-        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
-        window.userType = '<%= autenticado.tipo %>';
-        <% } else if (typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado) { %>
-        window.userType = 'c';
-        <% } %>
+    <script>
+        window.isAuthenticated = <%= (typeof authData !== 'undefined' && authData.isAuthenticated) || false %>;
+        window.userType = '<%= (typeof authData !== 'undefined' && authData.userType) || 'c' %>';
     </script>
-    <script src="/js/navegacao.js"></script>
+    
+    <script src="/js/verificar-codigo.js"></script>
     <script src="/js/navegacao.js"></script>
 </body>
 </html>
