--- a/app/views/pages/verificarsenha.ejs
+++ b/app/views/pages/verificarsenha.ejs
@@ -73,33 +73,8 @@
         <p class="copyright">©2024 Vintélo. Todos os direitos reservados.</p>
     </footer>
     
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const codigoInput = document.getElementById('codigo');
-            
-            // Permitir apenas números
-            codigoInput.addEventListener('input', function(e) {
-                this.value = this.value.replace(/\D/g, '');
-            });
-            
-            // Auto-submit quando 6 dígitos forem digitados
-            codigoInput.addEventListener('input', function(e) {
-                if (this.value.length === 6) {
-                    document.getElementById('verificarForm').submit();
-                }
-            });
-        });
-    </script>
-
-                <script>
-        window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
-        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
-        window.userType = '<%= autenticado.tipo %>';
-        <% } else if (typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado) { %>
-        window.userType = 'c';
-        <% } %>
-    </script>
-    <script src="/js/navegacao.js"></script>
+    <script src="/js/verificar-codigo.js"></script>
+    <script src="/js/perfil-autenticado.js"></script>
     <script src="/js/navegacao.js"></script>
 </body>
 </html>
